# mlflow

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.bigred  Makefile.seq  README  bigred.dspaces.job  catalyst.job  changelog  karst.case_1024.job  karst.case_512.job  karst.debug.job  karst.dspaces.job  karst.minor.job  karst.sim_consumer.job  paraview_start.job  regions.dspaces.job  regions.dspaces_N4.job  regions.reader.job  regions_nohdf.dspaces.job  same.minmax.job
applications/: analysis.c  analysis.h  catalyst.c  consumer.h  get_regions.c  put_regions.c  put_regions.h  run_with_dspaces.h  sample.c
catalyst/: CMakeLists.txt  FEAdaptor.h  FEDataStructures.cxx  FEDriver.cxx
cluster/: CMakeLists.txt  cluster.c  cluster.h
common/: CMakeLists.txt  divide.c  get_divs.c.2  read_file.h  region_def.c  test_div.c
data/: clusterid.txt  clusterid_1.txt  clusterid_201_lg_1.txt  getdata.sh  isotropic1024coarse.h5
data/clustering_results/: 201_t_1.txt  201_t_2.txt  201_t_3.txt  201_t_4.txt  201_t_5.txt  201_t_6.txt  201_t_7.txt  201_t_8.txt  201_t_9.txt
data/parallel/clustering_results/: 51_t_3.txt
data/sequential/: all_divs_51_k_5_t_0_ragged.txt  clusterid_51_k_5_t_0_ragged.txt
data/sequential/archives/: clusterid_201_lg.txt
dspaces/: .get_regions.c.swp  .get_regions.h.swp  .run_with_dspaces.c.swp  CMakeLists.txt  analysis.c  analysis.h  consumer.c  consumer.h  get_regions.c  get_regions.h  put_regions.c  put_regions.h  region_def.h  run_with_dspaces.c  run_with_dspaces.h  sample.c
myIcoFoam/: CMakeLists.txt  myIcoFoam.C  wmake.err  wmake.log.mpi
np-divs/: cscope.in.out  cscope.out  cscope.po.out  tags
np-divs/matlab/: npdivs_mex.cpp
np-divs/np-divs/: np_divs.cpp  np_divs.hpp
post_processing/: show_cluster.py  visual_cluster.py
results/: process.sh  process_end2end.sh  summary.txt  transform.py  transform.sh
results/archives/: 6044481.out
scripts/: bigred.small.job  karst.case_1024.job  karst.case_256.job  karst.case_512.job  karst.minor.job  karst.small.job  regions.dspaces.job
sequential/: do_clustering.c  do_clustering.h  sequential_run.c  sequential_run.h
simulator/: CMakeLists.txt  FEAdaptor.cxx  FEAdaptor.h  FEDataStructures.cxx  FEDataStructures.h  FEDriver.cxx  createFields.H  ds_adaptor.c  ds_adaptor.h  sim_Image.job  sim_gen.c  sim_gen.h
simulator/SampleScripts/: all_linked_field.py  feslicescript.py  glyph.py  write_sample.py
simulator/cavity/0/: U
simulator/cavity/constant/: transportProperties
simulator/cavity/system/: blockMeshDict  controlDict
simulator/cavity_32/system/: blockMeshDict
simulator/cavity_fine_1024/system/: blockMeshDict
simulator/cavity_fine_1025/system/: blockMeshDict
simulator/cavity_fine_256/: run.log.correct
simulator/cavity_fine_256/system/: blockMeshDict
simulator/cavity_fine_512/system/: blockMeshDict
simulator/myIcoFoam/: CMakeLists.txt  myIcoFoam.C
simulator/myIcoFoam/Make/: files  options
src/: CMakeLists.txt  common_utility.c  common_utility.h  divide.c  divide.h  do_clustering.c  do_clustering.h  get_divs.c  get_divs.h  main.c  main.cc  read_file.c  read_file.h  region_def.h  run.h  sequential_run.c  sequential_run.h  test_div.c  test_hdf.c  visualize.py
visualization/: show_cluster.py  visual_cluster.py  visualize.py
